[project]
name = "vllm-finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.4.0",
    "mlx>=0.30.6",
    "mlx-vlm>=0.3.12",
    "pdf2image>=1.17.0",
    "pydantic>=2.12.5",
    "qwen-vl-utils>=0.0.14",
    "reportlab>=4.4.10",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "radon>=6.0.1",
]
